# cdif

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  cdif.h  compile_commands.json  container.h  context.h  dependencychaintracker.h  imodule.h  registrar.h  registration.h  scopedtypefactories.h  servicenamefactory.h  type_traits.h  typefactories.h
builders/: factoryregistrationbuilder.h  interfaceregistrationbuilder.h  listregistrationbuilder.h  registrationbuilder.h  typeregistrationbuilder.h
include/cdif/: cdif.h  container.h  dependencychaintracker.h  imodule.h  registrar.h  registration.h  scopedtypefactories.h  typefactories.h
include/cdif/builders/: factoryregistrationbuilder.h  interfaceregistrationbuilder.h  listregistrationbuilder.h  registrationbuilder.h  typeregistrationbuilder.h
tests/: CMakeLists.txt  Makefile  container_tests.cc  factoryregistrationbuilder_tests.cc  interfaceregistrationbuilder_tests.cc  listregistrationbuilder_tests.cc  registrar_tests.cc  registration_tests.cc  registrationbuilder_tests.cc  test_types.h  typeregistrationbuilder_tests.cc
